criação dos testes para modulo user

--- a/package.json
+++ b/package.json
@@ -82,6 +82,9 @@
       }
     },
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/$1"
+    }
   }
 }
